# learn

./: IBM.md  README.md  jupyter.md  misc.md
C++/: calculator.cpp  cluster.cpp
IBM/: IBM.md  db2.md
addr/: README.md
algo/: README.md
anaconda/: README.md
arangodb/: start.md
asm/: README.md
aws/: add_ebs.md  awscli.md  band_port_80_non_root.md  deeplearning_ami.md  ec2_user.md  freetier.md  grep_in_s3file.md  k8s.md  kinesis.md  log.md  s3.md  ssh_port.md  tinyproxy.md  vpc.md
azkaban/: README.md  airflow.md
azure/: freetier.md  s3_to_azure.md
bigdata/: tag.md
blockchain/: links.md
caddy/: Caddyfile  README.md
cc/: main.cc
centos/: httpd.md
compiler/: lexer.md  pl.md  programming_languages_related.md
crawler/: 登录抓取.md
data/: to_process.md
deepfake/: README.md
devops/: API文档.md  U盘安装Ubuntu.md  gorelease.md  k8s.md  systems.md  text_file_busy.md  ubuntu挂载新硬盘.md  vim自定义语法高亮.md
dialog/: README.md  platforms.md
dns/: dns.md
dockerlearn/: dockercompose.md  dockerpull.md  mysql.md  nginx-php-fpm.md  readme.md
dotnet/: readme.md
editor/: linux.md  vscode.md
etcd/: README.md
facerecognition/: CMakeLists.txt  dnn_face_recognition_ex.cpp
fintech/: README.md
firebase/: web.md
fmr/: NLP_courses.md  README.md  Slot-Grammar.md  Transition-Based-Parsing.md  Van_Wijngaarden_grammar.md  Weighted-Tree-Automata-vs.-CFG.md  formal_semantics.md  luis.ai.md  meaning_representation.md  ner.md  neural-symbolic.md  note-on-common-linguistic-grammars.md  parsing_algorithm.md  pronoun.md  question-answering-datasets.md  semantic.md  words2number.md  资料.md
ftp/: README.md
functional-programming/: README.md
fuzzysearch/: README.md
gcp/: README.md
git/: Git分支管理策略.md  README.md  credential_caching.md  pull_request_command_line.md  revert.md  submodule.md  wiki.md
go4cms/: readme.md
golang/: chan.md  char.md  golang_js.md  golang_python.md  vanity-imports.md  交叉编译.md  文件上传.md
goplus/: func.gop  helloworld.gop
gpu/: README.md
hadoop/: README.md
handle/: README.md
haskell/: hello.hs
java/: README.md  编程.md
javascript/: npm.md  编程知识.md
kb/: mininglamp.md
leecode/: 146.cc
(+114 files in other folders)
